<resources>
    <string name="app_name">Hang IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="sign_in">Sign IN</string>
    <string name="or">or</string>
    <string name="facebook">FaceBook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="hangin">HangIN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">CREATE ACCOUNT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="places">Places</string>
    <string name="workshop">WorkShop</string>
    <string name="_3rd_street_area_town">3rd,Street,Area,Town</string>
    <string name="hang_in">Hang IN</string>

</resources>
